--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         header {
             text-align: center;
             padding: 3rem 1rem 1rem 1rem;
-            background: linear-gradient(135deg, #6a11cb, #2575fc);
+            background: #000;
             color: white;
         }
 
@@ -75,30 +75,30 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My CS180 Portfolio!</h1>
-        <p>Exploring computer science through projects and creativity</p>
+        <h1>CS180: jaitegchahal123</h1>
+        <p>fall 25</p>
     </header>
 
     <main>
         <a href="./1/index.html" class="card">
-            <h2>Project 1</h2>
-            <p>A brief description of Project 1 (e.g., Image Filtering & Hybrid Images)</p>
+            <h2>Project 0</h2>
+            <p>Becoming Friends with Your Camera</p>
         </a>
 
-        <a href="./2/index.html" class="card">
-            <h2>Project 2</h2>
+<!--         <a href="./2/index.html" class="card">
+            <h2>Project 1</h2>
             <p>A short description for Project 2</p>
         </a>
 
         <a href="./3/index.html" class="card">
-            <h2>Project 3</h2>
+            <h2>Project 2</h2>
             <p>A short description for Project 3</p>
-        </a>
+        </a> -->
         <!-- Add more project cards as needed -->
     </main>
 
     <footer>
-        &copy; 2025 Your Name — CS180 Portfolio
+        &copy; CS180 - jaitegchahal123
     </footer>
 </body>
 </html>
