--- a/index.html
+++ b/index.html
@@ -15,18 +15,20 @@
         header {
             text-align: center;
             padding: 3rem 1rem 1rem 1rem;
-            background: #000;
-            color: white;
+            background: #fff; /* white background */
+            color: #000;      /* black text */
         }
-
+        
         header h1 {
             margin: 0;
             font-size: 2.5rem;
+            color: #000; /* ensure header title is black */
         }
-
+        
         header p {
             font-size: 1.2rem;
-            opacity: 0.9;
+            opacity: 0.8;
+            color: #333; /* softer dark gray for subtitle */
         }
 
         main {
