--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         }
         
         header p {
-            font-size: 1.2rem;
+            font-size: 0.8rem;
             opacity: 0.8;
             color: #333; /* softer dark gray for subtitle */
         }
@@ -78,7 +78,7 @@
 </head>
 <body>
     <header>
-        <h1>CS180: jaitegchahal123</h1>
+        <h1>cs180 : jaitegchahal123</h1>
         <p>fall 25</p>
     </header>
 
