--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
         </a> -->
         <!-- Add more project cards as needed -->
     </main>
-
+<!-- 
     <footer>
         &copy; CS180 - jaitegchahal123
-    </footer>
+    </footer> -->
 </body>
 </html>
