--- a/1/index.html
+++ b/1/index.html
@@ -27,8 +27,9 @@
 
     header p {
       margin: 0.5rem 0 0 0;
-      font-size: 1.1rem;
+      font-size: 1.5rem;
       opacity: 0.8;
+      font-family: "Times New Roman", Times, serif;
     }
 
     main {
@@ -42,7 +43,7 @@
     }
 
     section h2 {
-      font-size: 1.6rem;
+      font-size: 0.9rem;
       margin-bottom: 1rem;
       color: #2575fc;
     }
@@ -62,6 +63,7 @@
 
     .text-block {
       font-size: 1rem;
+      font-family: "Times New Roman", Times, serif;
     }
 
     footer {
@@ -89,45 +91,47 @@
   <main>
     <!-- Part 1 -->
     <section>
-      <h2>Part 1: Text & Photos</h2>
+      <h2>Part 1: Selfie: The Wrong Way vs. The Right Ways</h2>
       <div class="content">
         <div class="text-block">
           <p>
-            In this first section, describe what you explored. For example:
-            learning basic camera settings, experimenting with shutter speed,
-            and understanding how light affects an image. Use clear, concise
-            descriptions so the reader follows your thought process.
-          </p>
-          <p>
-            You can highlight challenges faced, what you learned, and how it
-            connects to computational photography concepts.
+            The reason the second image looks better is because distortion is minimized with further distance.
           </p>
         </div>
         <div>
-          <img src="photo1.jpg" alt="Sample photo for part 1">
-          <img src="photo2.jpg" alt="Another sample photo" style="margin-top:1rem;">
+          <img src="photo1.jpg" alt="Part1">
+          <img src="photo2.jpg" alt="Part1" style="margin-top:1rem;">
         </div>
       </div>
     </section>
 
     <!-- Part 2 -->
     <section>
-      <h2>Part 2: Text & Photos</h2>
+      <h2>Part 2: Architectural Perspective Compression</h2>
       <div class="content">
         <div class="text-block">
           <p>
-            This second section might cover more advanced experiments:
-            trying different compositions, using depth of field creatively,
-            or comparing RAW vs JPEG captures.
-          </p>
-          <p>
-            Again, document both the technical side and your personal
-            reflections on how your understanding improved.
+            Zooming in from far distances compresses the actual distance (of first pic); hence, object ALONG the street look closer together (flattened, compressed).
           </p>
         </div>
         <div>
-          <img src="photo3.jpg" alt="Sample photo for part 2">
-          <img src="photo4.jpg" alt="Another photo example" style="margin-top:1rem;">
+          <img src="photo3.jpg" alt="Part2">
+          <img src="photo4.jpg" alt="Part2" style="margin-top:1rem;">
+        </div>
+      </div>
+    </section>
+
+    <!-- Part 3 -->
+    <section>
+      <h2>Part 2: The Dolly Zoom</h2>
+      <div class="content">
+        <div class="text-block">
+          <p>
+            Zooming in from far distances compresses the actual distance (of first pic); hence, object ALONG the street look closer together (flattened, compressed).
+          </p>
+        </div>
+        <div>
+          <img src="photo3.jpg" alt="Dolly Zoom">
         </div>
       </div>
     </section>
