--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>My Portfolio</title>
     <style>
         body {
-            font-family: "Segoe UI", Arial, sans-serif;
+            font-family: 'Times New Roman', Times, serif;
             margin: 0;
             padding: 0;
             background: #f9fafc;
@@ -15,10 +15,10 @@
         header {
             text-align: center;
             padding: 3rem 1rem 1rem 1rem;
-            background: #fff; /* white background */
-            color: #000;      /* black text */
+            color: #000;
         }
-        
+
+
         header h1 {
             margin: 0;
             font-size: 2.5rem;
@@ -27,7 +27,7 @@
         
         header p {
             font-size: 0.8rem;
-            opacity: 0.8;
+            opacity: 2.8;
             color: #333; /* softer dark gray for subtitle */
         }
 
@@ -78,8 +78,8 @@
 </head>
 <body>
     <header>
-        <h1>cs180 : jaitegchahal123</h1>
-        <p>fall 25</p>
+        <h1>Jaiteg Chahal</h1>
+        <p>CS180 fall 25</p>
     </header>
 
     <main>
