--- a/1/index.html
+++ b/1/index.html
@@ -155,8 +155,8 @@
           </p>
         </div>
         <div class="image-pair">
-          <img src="./media/IMG_5215.jpg" alt="Part1 - Close selfie (distorted)">
-          <img src="./media/IMG_5216.jpg" alt="Part1 - Stepped back + zoomed (better proportions)">
+          <img src="./media/IMG_5215.jpg" alt="close selfie">
+          <img src="./media/IMG_5216.jpg" alt="back and zoom">
         </div>
       </div>
     </section>
