--- a/1/index.html
+++ b/1/index.html
@@ -155,8 +155,8 @@
           </p>
         </div>
         <div class="image-pair">
-          <img src="./media/IMG_5215.jpg" alt="close selfie">
-          <img src="./media/IMG_5216.jpg" alt="back and zoom">
+          <img src="./media/IMG_5218.jpg" alt="close 111selfie">
+          <img src="./media/img_5216.jpg" alt="back and zoom">
         </div>
       </div>
     </section>
