--- a/1/index.html
+++ b/1/index.html
@@ -155,7 +155,7 @@
           </p>
         </div>
         <div class="image-pair">
-          <img src="./media/img_5215.jpg" alt="close 111selfie">
+          <img src="./media/img_5215.jpg" alt="close selfie-v2">
           <img src="./media/img_5216.jpg" alt="back and zoom">
         </div>
       </div>
