--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
             <p>Becoming Friends with Your Camera</p>
         </a>
 
-<!--         <a href="./2/index.html" class="card">
-            <h2>Project 1</h2>
-            <p>A short description for Project 2</p>
-        </a>
-
+        <a href="./proj1/index.html" class="card">
+                <h2>Project 1</h2>
+                <p>Colorizing the Prokudin-Gorskii Photo Collection</p>
+            </a>
+<!--     
         <a href="./3/index.html" class="card">
             <h2>Project 2</h2>
             <p>A short description for Project 3</p>
